--- a/style.sass
+++ b/style.sass
@@ -1,6 +1,6 @@
 @font-face 
     font-family: "Inter"
-    src: url(https://fonts.google.com/specimen/Inter) format("truetype")
+    src: url("./Inter-VariableFont_slnt,wght.ttf") format("truetype")
 
 
 body
